add border radius to card

--- a/css/style.css
+++ b/css/style.css
@@ -14,4 +14,5 @@ body{
     background: linear-gradient(hsl(213, 19%, 18%), hsl(216, 12%, 8%));
     height:400px;
     width:400px;
+    border-radius: 20px;
 }
