--- a/css/style.css
+++ b/css/style.css
@@ -17,5 +17,16 @@ body{
     background: linear-gradient(hsl(213, 19%, 17%), hsl(216, 12%, 11%));
     height:400px;
     width:400px;
+    padding: 20px;
     border-radius: 20px;
+}
+.top-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+    background-color: hsl(213, 18%, 21%);;
 }
