--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body{
     justify-content: center;
     align-items: center;
     background-color: hsl(216, 12%, 8%);
+    font-family: 'Overpass', sans-serif;
 }
 .hidden{
     display: none;
@@ -32,4 +33,8 @@ body{
 }
 .top-icon img{
     transform: scale(0.9);
+}
+#card h1{
+    color: #fff;
+
 }
