--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,12 @@ body{
     font-size: 14px;
     gap: 14px;
 }
+.btn{
+    background-color: hsl(25, 97%, 53%);
+    color: #fff;
+    border: 0;
+    border-radius: 30px;
+    text-transform: uppercase;
+    width: 360px;
+    height: 45px;
+}
