--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,16 @@ body{
     border: 0;
     border-radius: 30px;
     text-transform: uppercase;
+    letter-spacing: 2px;
     width: 360px;
     height: 45px;
+    transition: background-color 0.5s, color 0.5s;
+}
+.btn:hover{
+    cursor: pointer;
+    background-color: #fff;
+    color: hsl(25, 97%, 53%);
+}
+.btn:active{
+    transform: translateY(2px);
 }
