change card id to class

--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,7 @@ body{
     background-color: hsl(216, 12%, 8%);
     font-family: 'Overpass', sans-serif;
 }
-.hidden{
-    display: none;
-}
-#card{
+.card{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -20,6 +17,9 @@ body{
     width: 390px;
     padding: 20px 0px 20px 25px;
     border-radius: 20px;
+}
+.hidden{
+    display: none;
 }
 .top-icon, .dig{
     display: flex;
