--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,13 @@ body{
     border-radius: 20px;
     align-items: center;
 }
+.selected-result{
+    padding: 4px 20px;
+    border-radius: 20px;
+    font-size: 14px;
+    background-color: hsl(213, 19%, 18%);
+    color: rgba(251, 116, 19, 0.7);
+}
 .thanksCard h1{
     color: #fff;
 }
