--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,6 @@ body{
     padding: 20px 0px 20px 25px;
     border-radius: 20px;
 }
-.hidden{
-    display: none;
-}
 .top-icon, .dig{
     display: flex;
     justify-content: center;
@@ -32,12 +29,12 @@ body{
     background-color: hsl(213, 19%, 18%);
     transition: 0.3s;
 }
-#card h1{
+.card h1{
     color: #fff;
     margin-top: 0;
     margin-bottom: 0;
 }
-#card p{
+.card p{
     color: rgba(149, 158, 172, 0.7);
     margin-top: 0;
     width: 350px;
@@ -52,9 +49,6 @@ body{
     cursor: pointer;
     background-color: hsl(25, 97%, 53%);
     color: #fff;
-}
-.selected{
-    background-color: hsl(217, 12%, 63%);
 }
 .btn{
     background-color: hsl(25, 97%, 53%);
@@ -103,4 +97,10 @@ body{
     text-align: center;
     line-height: 1.5;
     margin-top: 0;
+}
+.hidden{
+    display: none;
+}
+.selected{
+    background-color: hsl(217, 12%, 63%);
 }
