--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body{
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    border: 0;
     width: 50px;
     height: 50px;
     margin-left: 10px;
@@ -52,6 +53,7 @@ body{
 }
 .dig:focus{
     background-color: hsl(217, 12%, 63%);
+    color: #fff;
 }
 .btn{
     background-color: hsl(25, 97%, 53%);
@@ -103,7 +105,4 @@ body{
 }
 .hidden{
     display: none;
-}
-.selected{
-    background-color: hsl(217, 12%, 63%);
 }
