add media query

--- a/css/style.css
+++ b/css/style.css
@@ -106,3 +106,8 @@ body{
 .hidden{
     display: none;
 }
+@media (max-width: 600px){
+    .card, .thanksCard{
+        transform: scale(0.8);
+    }
+}
